# bulk-com-watcher

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
make/: help.mk  install.mk
src/bulk_com_watcher/: main.py  model.py
tests/unit_tests/: test_parse.py
